# ctrlX

./: .gitignore  Master CLI prompt template.doc  README.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/core/: config.yaml
apps/desktop_agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop_agent/src-tauri/src/: main.rs
apps/desktop_agent/src-tauri/src/modules/: automation.rs  mod.rs  transport.rs  workflows.rs
apps/desktop_agent/src-tauri/src/modules/handlers/: agent.rs  input.rs  mod.rs  system.rs
apps/desktop_agent/src-tauri/src/modules/settings/: mod.rs
apps/mobile_app/: pubspec.yaml
apps/mobile_app/lib/: main.dart
apps/mobile_app/lib/modules/: commands.dart  discovery.dart  history.dart  security.dart  transport.dart
apps/mobile_app/lib/ui/panels/: browser_panel.dart  dashboard_panel.dart  media_panel.dart  remote_panel.dart  system_panel.dart  workflows_panel.dart
apps/mobile_app/lib/ui/widgets/: control_button.dart  status_indicator.dart
docs/: architecture.md  development.md  protocol.md  setup.md
