[package]
name = "desktop_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
socketioxide = "0.10"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
mdns-sd = "0.11"
rand = "0.8"
chrono = "0.4"
enigo = "0.1.2"
screenshots = "0.8"
sysinfo = "0.30"
base64 = "0.21"
playwright = "0.0.21"

[lib]
name = "desktop_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "1.5"
